fix mobile overflow

--- a/index3.css
+++ b/index3.css
@@ -31,12 +31,15 @@ body{
 nav{
     position: fixed;
     top: 1rem;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     justify-content: center;
     z-index: 1000;
-    width: 80%;
+    width: 90%;
     backdrop-filter: blur(8px);
     border-radius: 20rem;
+    max-width: 1200px;
     /* border: 1px solid gray; */
     box-shadow: 0 0 0 0.04rem gray;
 }
@@ -127,6 +130,12 @@ nav > ul > button:hover{
         /* background-color: aqua;    */
     }
 
+    nav > ul > a{
+        padding: 1rem;
+        text-align: center;
+        width: 100%;
+    }
+
     nav > ul > button{
         display: none;
     }
@@ -207,17 +216,15 @@ nav > ul > button:hover{
 }
 
 .brands{
-    width: 20%;
+    width: fit-content;
     border-radius: 20rem;
     background-color: rgba(224, 222, 118, 0.3);
     display: flex;
     justify-content: center;
-    margin-bottom: 0;
-    margin-top: 10rem;
+    margin:10rem auto 0 auto;
     font-size: 1rem;
     color: yellow;
-    position: relative;
-    left: 40%;
+    padding: 0 1.5rem;
 }
 
 
